--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Student_site</title>
 </head>
 <body>
-    Hii there this is my new page
+    Hi there this is Prabhat Singh
 </body>
 </html>
