Added some background in my Intro Part and save it

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Student_site</title>
 </head>
 <body>
-    Hi there this is Prabhat Singh
+    Hi there this is Prabhat Singh , Currently I am looking for frontend development job or internship 
+    I have done my Graduation in BCA from Ignou
 </body>
 </html>
