--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     Hi there this is Prabhat Singh , Currently I am looking for frontend development job or internship 
     I have done my Graduation in BCA from Ignou
+
+    <p>Some of my favourite books</p>
+    <li>Coding the Interview</li>
+    <li>JS-For Interview</li>
+    <li>Algorithm Design</li>
 </body>
 </html>
