added my some projects in project section and are deployed on server

--- a/index.html
+++ b/index.html
@@ -1,73 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student_site</title>
-    <link href="styles.css" rel='stylesheet'/>
-</head>
-<body>
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body>
     <nav class="navigation container">
-        <div class="nav-dev">IamDeveloper</div>
+      <div class="nav-dev">IamDeveloper</div>
 
-    <ul class="list-non-bullet nav-pills">
+      <ul class="list-non-bullet nav-pills">
         <li class="list-inline">
-            <a  class="link link-active" href="/">Home</a>
+          <a class="link link-active" href="/">Home</a>
         </li>
         <li class="list-inline">
-            <a class="link" href="/projects.html">Projects</a>
+          <a class="link" href="/projects.html">Projects</a>
         </li>
         <li class="list-inline">
-            <a class="link" href="/blogs.html">Blogs</a>
+          <a class="link" href="/blogs.html">Blogs</a>
         </li>
-    </ul>
-
+      </ul>
     </nav>
 
     <header class="hero">
-        <img class="hero-img" src='images/hero.svg'/>
-        <h1 class="hero-heading">Adrash Balak the Web developer</h1>
+      <img class="hero-img" src="images/hero.svg" />
+      <h1 class="hero-heading">Adrash Balak the Web developer</h1>
     </header>
 
     <section class="section ow">
-        <div class="container-center">
-            <h1>Technologies</h1>
-            <p>I'm familier with HTML, CSS , Javascript.js , Node,js , React.js and Redux.js</p>
-        </div>
+      <div class="container-center">
+        <h1>Technologies</h1>
+        <p>
+          I'm familier with HTML, CSS , Javascript.js , Node,js and React.js ,
+          also with Git , Github , VScode and CodeSandbox.io
+        </p>
+      </div>
     </section>
 
     <section class="section">
-        <div class="container-center">
-            <h1>Projects</h1>
-            <p>I want to showcase my work so that i have deployed projects online , Please have a look </p>
-            <a class="link primary-link"href="/">Browse here</a>
-        </div>
+      <div class="container-center">
+        <h1>Projects</h1>
+        <p>
+          I want to showcase my work so that i have deployed projects online ,
+          Please have a look
+        </p>
+        <a class="link primary-link" href="/projects.html">Browse here</a>
+      </div>
     </section>
 
     <section class="section ow">
-        <div class="container-center">
-            <h1>Blogs</h1>
-            <p>I have written some blogs with the Technologies I'm familier with and also hosited it online , Please have a look</p>
-            <a class="link secondary-link"href="/">Read Blogs</a>
-        </div>
+      <div class="container-center">
+        <h1>Blogs</h1>
+        <p>
+          I have written some blogs with the Technologies I'm familier with and
+          also hosited it online , Please have a look
+        </p>
+        <a class="link secondary-link" href="/blogs.html">Read Blogs</a>
+      </div>
     </section>
 
     <footer class="footer">
-        <div class="footer-header">Connect with me here</div>
-        <ul class="social-links list-non-bullet">
-            <li class="list-inline">
-                <a class="link" href="https://github.com/dev-prabhat">Github</a>
-            </li>
-            <li class="list-inline">
-                <a class="link" href="/">Twitter</a>
-            </li>
-            <li class="list-inline">
-                <a  class="link"href="https://www.linkedin.com/in/prabhat-singh-93a54b1b6/">LinkedIn</a>
-            </li>
-            
-        </ul>
+      <div class="footer-header">Connect with me here</div>
+      <ul class="social-links list-non-bullet">
+        <li class="list-inline">
+          <a class="link" href="https://github.com/dev-prabhat" target="_blank">
+            Github
+          </a>
+        </li>
+        <li class="list-inline">
+          <a class="link" href="/">Twitter</a>
+        </li>
+        <li class="list-inline">
+          <a
+            class="link"
+            href="https://www.linkedin.com/in/prabhat-singh-93a54b1b6/"
+            target="_blank"
+          >
+            LinkedIn
+          </a>
+        </li>
+      </ul>
     </footer>
-    
-</body>
+  </body>
 </html>
