--- a/projects.html
+++ b/projects.html
@@ -1,28 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
-    <link href="styles.css" rel='stylesheet'/>
-</head>
-<body>
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body>
     <nav class="navigation container">
-        <div class="nav-dev">IamDeveloper</div>
+      <div class="nav-dev">IamDeveloper</div>
 
-    <ul class="list-non-bullet nav-pills">
+      <ul class="list-non-bullet nav-pills">
         <li class="list-inline">
-            <a  class="link " href="/">Home</a>
+          <a class="link" href="/">Home</a>
         </li>
         <li class="list-inline">
-            <a class="link link-active" href="/projects.html">Projects</a>
+          <a class="link link-active" href="/projects.html">Projects</a>
         </li>
         <li class="list-inline">
-            <a class="link" href="/blogs.html">Blogs</a>
+          <a class="link" href="/blogs.html">Blogs</a>
         </li>
-    </ul>
-
+      </ul>
     </nav>
-</body>
+
+    <section class="section">
+      <div class="container-center">
+        <h1>Mandalorian-talks</h1>
+        <p>
+          A GUI or Web Application , build with HTML , CSS and pure Javascript
+          (vanilla JS) deployed on Netlify . It takes input text and convert it
+          into Mandalorian language
+        </p>
+        <a
+          class="link primary-link"
+          href="https://mandalorian-speech.netlify.app/"
+          target="_blank"
+        >
+          Click here to play
+        </a>
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/mandalorian-talks"
+          target="_blank"
+        >
+          For Source Click here
+        </a>
+      </div>
+    </section>
+
+    <section class="section ow">
+      <div class="container-center">
+        <h1>Banana-talks</h1>
+        <p>
+          A GUI or Web Application , build with HTML , CSS and pure Javascript
+          (vanilla JS) deployed on Netlify . It takes input text and convert it
+          into Minion Language
+        </p>
+        <a
+          class="link primary-link"
+          href="https://translate-minion111.netlify.app/"
+          target="_blank"
+        >
+          Click here to play
+        </a>
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/banana-talks"
+          target="_blank"
+        >
+          For Source Click here
+        </a>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container-center">
+        <h1>Marvel's-Quiz</h1>
+        <p>
+          This is a Marvel's Quiz which give you points on the behalf of your
+          response , Used Javascript language runs in Node.js Environment
+        </p>
+        <a
+          class="link primary-link"
+          href="https://replit.com/@PrabhatSingh2/Marvels-Quiz?embed=1&output=1#index.js"
+          target="_blank"
+        >
+          Click here to play
+        </a>
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/Marvel-s-Quiz"
+          target="_blank"
+        >
+          For Source Click here
+        </a>
+      </div>
+    </section>
+    <section class="section ow">
+      <div class="container-center">
+        <h1>CLI Quize App</h1>
+        <p>
+          A CLI Application which takes input and give you a point regarding the
+          question is asked , Mainly based on Javascript runs in Node.js
+          Environment
+        </p>
+        <a
+          class="link primary-link"
+          href="https://replit.com/@PrabhatSingh2/end-game?embed=1&output=1#index.js"
+          target="_blank"
+        >
+          Click here to play
+        </a>
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/end-game"
+          target="_blank"
+        >
+          For Source Click here
+        </a>
+      </div>
+    </section>
+  </body>
 </html>
