adding react.js web application to the project section

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,31 @@
       </ul>
     </nav>
 
+    <section class="section ow">
+      <div class="container-center">
+        <h1>Emoji-interpreter</h1>
+        <p>
+          A GUI or Web Application , build with HTML , CSS , Javascript and
+          React.js (JS library) deployed on Netlify . It takes input emoji and
+          show it's meaning for whose meaning is in React State
+        </p>
+        <a
+          class="link primary-link"
+          href="https://csb-rdrhc.netlify.app/"
+          target="_blank"
+        >
+          Click here to play
+        </a>
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/emoji-interpreter"
+          target="_blank"
+        >
+          For Source Click here
+        </a>
+      </div>
+    </section>
+
     <section class="section">
       <div class="container-center">
         <h1>Mandalorian-talks</h1>
