updating project section with some more projects

--- a/blogs.html
+++ b/blogs.html
@@ -1,32 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blogs</title>
-    <link href="styles.css" rel='stylesheet'/>
-</head>
-<body>
+    <link href="styles.css" rel="stylesheet" />
+  </head>
+  <body>
     <nav class="navigation container">
-        <div class="nav-dev">IamDeveloper</div>
+      <div class="nav-dev">IamDeveloper</div>
 
-    <ul class="list-non-bullet nav-pills">
+      <ul class="list-non-bullet nav-pills">
         <li class="list-inline">
-            <a  class="link " href="/">Home</a>
+          <a class="link" href="/">Home</a>
         </li>
         <li class="list-inline">
-            <a class="link" href="/projects.html">Projects</a>
+          <a class="link" href="/projects.html">Projects</a>
         </li>
         <li class="list-inline">
-            <a class="link link-active" href="/blogs.html">Blogs</a>
+          <a class="link link-active" href="/blogs.html">Blogs</a>
         </li>
-    </ul>
-
+      </ul>
     </nav>
     <header class="hero">
-        <h1 class="hero-heading">my <span class="">blogs</span></h1>
-        <h2>This is an assignment for me</h2>
+      <h1 class="hero-heading">my <span class="">blogs</span></h1>
+      <h2>This is an assignment for completion</h2>
     </header>
-</body>
+
+    <footer class="footer">
+      <div class="footer-header">Connect with me here</div>
+      <ul class="social-links list-non-bullet">
+        <li class="list-inline">
+          <a class="link" href="https://github.com/dev-prabhat" target="_blank">
+            Github
+          </a>
+        </li>
+        <li class="list-inline">
+          <a
+            class="link"
+            href="https://twitter.com/prabhat_singh97"
+            target="_blank"
+            >Twitter</a
+          >
+        </li>
+        <li class="list-inline">
+          <a
+            class="link"
+            href="https://www.linkedin.com/in/prabhat-singh-93a54b1b6/"
+            target="_blank"
+          >
+            LinkedIn
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
