--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 
     <header class="hero">
       <img class="hero-img" src="images/hero.svg" />
-      <h1 class="hero-heading">Adrash Balak the Web developer</h1>
+      <h1 class="hero-heading">Prabhat Singh | The Web developer</h1>
     </header>
 
     <section class="section ow">
       <div class="container-center">
         <h1>Technologies</h1>
         <p>
-          I'm familier with HTML, CSS , Javascript.js , Node,js and React.js ,
-          also with Git , Github , VScode and CodeSandbox.io
+          I'm familier with HTML, CSS , Javascript , Node,js and React.js , also
+          with Git , Github , VScode and CodeSandbox.io
         </p>
       </div>
     </section>
@@ -70,7 +70,12 @@
           </a>
         </li>
         <li class="list-inline">
-          <a class="link" href="/">Twitter</a>
+          <a
+            class="link"
+            href="https://twitter.com/prabhat_singh97"
+            target="_blank"
+            >Twitter</a
+          >
         </li>
         <li class="list-inline">
           <a
