--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,56 @@
 
     <section class="section ow">
       <div class="container-center">
+        <h1>Book-recommondation</h1>
+        <p>
+          A GUI or Web Application , build with HTML , CSS , Javascript and
+          React.js (JS library) deployed on Netlify . It Show different Books on
+          the related field when you click on the button
+        </p>
+        <a
+          class="link primary-link"
+          href="https://csb-u9h1p.netlify.app/"
+          target="_blank"
+        >
+          Live Project
+        </a>
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/Book-recommondation"
+          target="_blank"
+        >
+          Source Code
+        </a>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container-center">
+        <h1>Lucky-Birthday</h1>
+        <p>
+          A GUI or Web Application , build with HTML , CSS , Javascript and
+          React.js (JS library) deployed on Netlify . It takes input Your
+          Birthday and any Number and give your Birthday is Lucky or Not
+        </p>
+        <a
+          class="link primary-link"
+          href="https://birthday-luck1.netlify.app/"
+          target="_blank"
+        >
+          Live Project
+        </a>
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/Lucky-Birthday"
+          target="_blank"
+        >
+          Source Code
+        </a>
+      </div>
+    </section>
+
+    <section class="section ow">
+      <div class="container-center">
         <h1>Emoji-interpreter</h1>
         <p>
           A GUI or Web Application , build with HTML , CSS , Javascript and
@@ -37,14 +87,14 @@
           href="https://csb-rdrhc.netlify.app/"
           target="_blank"
         >
-          Click here to play
+          Live Project
         </a>
         <a
           class="link secondary-link"
           href="https://github.com/dev-prabhat/emoji-interpreter"
           target="_blank"
         >
-          For Source Click here
+          Source Code
         </a>
       </div>
     </section>
@@ -62,14 +112,14 @@
           href="https://mandalorian-speech.netlify.app/"
           target="_blank"
         >
-          Click here to play
+          Live Project
         </a>
         <a
           class="link secondary-link"
           href="https://github.com/dev-prabhat/mandalorian-talks"
           target="_blank"
         >
-          For Source Click here
+          Source Code
         </a>
       </div>
     </section>
@@ -87,14 +137,14 @@
           href="https://translate-minion111.netlify.app/"
           target="_blank"
         >
-          Click here to play
+          Live Project
         </a>
         <a
           class="link secondary-link"
           href="https://github.com/dev-prabhat/banana-talks"
           target="_blank"
         >
-          For Source Click here
+          Source Code
         </a>
       </div>
     </section>
@@ -111,14 +161,14 @@
           href="https://replit.com/@PrabhatSingh2/Marvels-Quiz?embed=1&output=1#index.js"
           target="_blank"
         >
-          Click here to play
+          Live Project
         </a>
         <a
           class="link secondary-link"
           href="https://github.com/dev-prabhat/Marvel-s-Quiz"
           target="_blank"
         >
-          For Source Click here
+          Source Code
         </a>
       </div>
     </section>
@@ -135,16 +185,44 @@
           href="https://replit.com/@PrabhatSingh2/end-game?embed=1&output=1#index.js"
           target="_blank"
         >
-          Click here to play
+          Live Project
         </a>
         <a
           class="link secondary-link"
           href="https://github.com/dev-prabhat/end-game"
           target="_blank"
         >
-          For Source Click here
+          Source Code
         </a>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="footer-header">Connect with me here</div>
+      <ul class="social-links list-non-bullet">
+        <li class="list-inline">
+          <a class="link" href="https://github.com/dev-prabhat" target="_blank">
+            Github
+          </a>
+        </li>
+        <li class="list-inline">
+          <a
+            class="link"
+            href="https://twitter.com/prabhat_singh97"
+            target="_blank"
+            >Twitter</a
+          >
+        </li>
+        <li class="list-inline">
+          <a
+            class="link"
+            href="https://www.linkedin.com/in/prabhat-singh-93a54b1b6/"
+            target="_blank"
+          >
+            LinkedIn
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
