added more projects in project navigation

--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,60 @@
 
     <section class="section ow">
       <div class="container-center">
+        <h1>Profit-Loss-Statement</h1>
+        <p>
+          A GUI or Web Application , build with HTML , CSS , Javascript deployed
+          on Netlify . It takes input Cost Price , Stocks and Selling Price and
+          give output related to the Profit or Loss
+        </p>
+        <a
+          class="link primary-link"
+          href="https://statement-calculator.netlify.app/"
+          target="_blank"
+        >
+          Live Project
+        </a>
+        <br />
+        <br />
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/profit-loss-statement"
+          target="_blank"
+        >
+          Source Code
+        </a>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container-center">
+        <h1>Cash-register</h1>
+        <p>
+          A GUI or Web Application , build with HTML , CSS , Javascript deployed
+          on Netlify that calculate the count of currency Notes to be given when
+          a customer purchases an item and give cash to pay bills
+        </p>
+        <a
+          class="link primary-link"
+          href="https://cash-counter-app.netlify.app/"
+          target="_blank"
+        >
+          Live Project
+        </a>
+        <br />
+        <br />
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/cash-register"
+          target="_blank"
+        >
+          Source Code
+        </a>
+      </div>
+    </section>
+
+    <section class="section ow">
+      <div class="container-center">
         <h1>Book-recommondation</h1>
         <p>
           A GUI or Web Application , build with HTML , CSS , Javascript and
