Adding to new projects

--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,59 @@
 
     <section class="section ow">
       <div class="container-center">
+        <h1>Fun-with-Triangles</h1>
+        <p>
+          A Web Application where I have used HTML5 , CSS3 and JavaScript for
+          creating this application and also deployed on the web server
+        </p>
+        <a
+          class="link primary-link"
+          href="https://triangle-known.netlify.app/"
+          target="_blank"
+        >
+          Live Project
+        </a>
+        <br />
+        <br />
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/fun-with-Triangles"
+          target="_blank"
+        >
+          Source Code
+        </a>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container-center">
+        <h1>Palindrome-birthday</h1>
+        <p>
+          A Web Application where I have used HTML5 , CSS3 and JavaScript for
+          creating this application and also deployed on the web server check is
+          your birthday a Palindrome or Not
+        </p>
+        <a
+          class="link primary-link"
+          href="https://is-dob-a-palindrome.netlify.app/"
+          target="_blank"
+        >
+          Live Project
+        </a>
+        <br />
+        <br />
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/palindrome-birthday"
+          target="_blank"
+        >
+          Source Code
+        </a>
+      </div>
+    </section>
+
+    <section class="section ow">
+      <div class="container-center">
         <h1>Profit-Loss-Statement</h1>
         <p>
           A GUI or Web Application , build with HTML , CSS , Javascript deployed
