Added dummy blogs here

--- a/blogs.html
+++ b/blogs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blogs</title>
+    <title>Blogs | Prabhat Singh</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
@@ -24,9 +24,42 @@
       </ul>
     </nav>
     <header class="hero">
-      <h1 class="hero-heading">my <span class="">blogs</span></h1>
-      <h2>This is an assignment for completion</h2>
+      <h1 class="hero-heading">my <span class="">Blogs</span></h1>
     </header>
+
+    <section class="section ow">
+      <div class="container-center">
+        <h1>Dummy Blog1</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+          suscipit adipisci, autem error dolore
+        </p>
+        <a
+          class="link primary-link"
+          href="https://dummy-blog1.netlify.app/"
+          target="_blank"
+        >
+          Read Here
+        </a>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container-center">
+        <h1>Dummy Blog2</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
+          suscipit adipisci, autem error dolore
+        </p>
+        <a
+          class="link primary-link"
+          href="https://dummy-blog2.netlify.app/"
+          target="_blank"
+        >
+          Read Here
+        </a>
+      </div>
+    </section>
 
     <footer class="footer">
       <div class="footer-header">Connect with me here</div>
