--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Projects</title>
+    <title>Projects | Prabhat Singh</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
@@ -259,6 +259,55 @@
         <a
           class="link secondary-link"
           href="https://github.com/dev-prabhat/banana-talks"
+          target="_blank"
+        >
+          Source Code
+        </a>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container-center">
+        <h1>Blog Page</h1>
+        <p>My Dummy Blog Page where all blogs are deployed</p>
+        <a
+          class="link primary-link"
+          href="https://prabhatsingh-portfolio.netlify.app/blogs.html"
+          target="_blank"
+        >
+          Live Project
+        </a>
+        <br />
+        <br />
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/prabhat_singh-portfolio/blob/main/blogs.html"
+          target="_blank"
+        >
+          Source Code
+        </a>
+      </div>
+    </section>
+
+    <section class="section ow">
+      <div class="container-center">
+        <h1>My-Portfolio</h1>
+        <p>
+          Protfolio to showcase my skill and give my Introduction, build with
+          HTML , CSS and pure Javascript (vanilla JS) deployed on Netlify
+        </p>
+        <a
+          class="link primary-link"
+          href="https://prabhatsingh-portfolio.netlify.app/"
+          target="_blank"
+        >
+          Live Project
+        </a>
+        <br />
+        <br />
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/prabhat_singh-portfolio"
           target="_blank"
         >
           Source Code
