completed all projects and blogs

--- a/blogs.html
+++ b/blogs.html
@@ -29,6 +29,41 @@
 
     <section class="section ow">
       <div class="container-center">
+        <h1>More tags in HTML</h1>
+        <p>
+          Before this, we have learned some basic tags of HTML, now to upgrade
+          our knowledge needs to learn new tags.
+        </p>
+        <a
+          class="link primary-link"
+          href="https://medium.com/@singhprabhatp.s.224/more-tags-in-html-993a9fc6612b"
+          target="_blank"
+        >
+          Read Here
+        </a>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container-center">
+        <h1>Introduction to HTML</h1>
+        <p>
+          As we all know, to learn web development it’s need to learn many
+          things HTML, CSS, and JavaScript, so in this blog, we are going to
+          learn HTML
+        </p>
+        <a
+          class="link primary-link"
+          href="https://medium.com/@singhprabhatp.s.224/introduction-to-html-c1c6e7ebd819"
+          target="_blank"
+        >
+          Read Here
+        </a>
+      </div>
+    </section>
+
+    <section class="section ow">
+      <div class="container-center">
         <h1>Dummy Blog1</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque,
