--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,22 @@
       </ul>
     </nav>
 
+    <section class="section">
+      <div class="container-center">
+        <h1>Write two blogs</h1>
+        <p>
+          Two Blogs are completed , and here is the link to the that section
+        </p>
+        <a
+          class="link primary-link"
+          href="https://prabhatsingh-portfolio.netlify.app/blogs.html"
+          target="_blank"
+        >
+          Checkout the blogs
+        </a>
+      </div>
+    </section>
+
     <section class="section ow">
       <div class="container-center">
         <h1>Fun-with-Triangles</h1>
@@ -317,6 +333,29 @@
 
     <section class="section">
       <div class="container-center">
+        <h1>First Portfolio</h1>
+        <p>My Dummy Blog Page where all blogs are deployed</p>
+        <a
+          class="link primary-link"
+          href="https://dummy-portfolio1.netlify.app/"
+          target="_blank"
+        >
+          Live Project
+        </a>
+        <br />
+        <br />
+        <a
+          class="link secondary-link"
+          href="https://github.com/dev-prabhat/dummy-portfolio"
+          target="_blank"
+        >
+          Source Code
+        </a>
+      </div>
+    </section>
+
+    <section class="section ow">
+      <div class="container-center">
         <h1>Marvel's-Quiz</h1>
         <p>
           This is a Marvel's Quiz which give you points on the behalf of your
@@ -340,7 +379,7 @@
         </a>
       </div>
     </section>
-    <section class="section ow">
+    <section class="section">
       <div class="container-center">
         <h1>CLI Quize App</h1>
         <p>
